log
Wed 20 Mar 2024 02:05:23 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f78c365
Wed 20 Mar 2024 02:07:29 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:14: error: expected expression before ‘List’
   53 |     pushBack(List *L, void *dato)
      |              ^~~~
exercises.c:53:5: error: too few arguments to function ‘pushBack’
   53 |     pushBack(List *L, void *dato)
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:53:34: error: expected ‘;’ before ‘}’ token
   53 |     pushBack(List *L, void *dato)
      |                                  ^
      |                                  ;
   54 |   }
      |   ~                               
Compilation failed
3eecd5a
Wed 20 Mar 2024 02:07:36 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:14: error: expected expression before ‘List’
   53 |     pushBack(List *L, void *dato);
      |              ^~~~
exercises.c:53:5: error: too few arguments to function ‘pushBack’
   53 |     pushBack(List *L, void *dato);
      |     ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
Compilation failed
45eaff4
Wed 20 Mar 2024 02:10:45 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
108f46c
Wed 20 Mar 2024 02:14:14 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:72:19: error: expected ‘;’ before ‘}’ token
   72 |     dato = next(L)
      |                   ^
      |                   ;
   73 |   }
      |   ~                
Compilation failed
1003f7e
Wed 20 Mar 2024 02:14:21 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
137d750
Wed 20 Mar 2024 02:17:48 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0e45c3c
Wed 20 Mar 2024 02:26:32 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
c5038ec
Wed 20 Mar 2024 02:31:33 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
588c25b
Wed 20 Mar 2024 02:37:26 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:113:10: error: ‘pilaTemp’ undeclared (first use in this function); did you mean ‘pilaTemp1’?
  113 |     push(pilaTemp, temp);
      |          ^~~~~~~~
      |          pilaTemp1
exercises.c:113:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:107:10: error: unused variable ‘pilaTemp1’ [-Werror=unused-variable]
  107 |   Stack* pilaTemp1 = create_stack();
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
27e2554
